--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>DATAV-SCHEMA</title>
 </head>
 <body>
-<div id="app-3">
+<div id="app">
   <div
       id="loading-mask"
       style="position:fixed;top:0;left:0;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;color:#fff;background: linear-gradient(45deg, #222428, #444856);"
